# fetchRobotRecycle

./: .gitignore  README.md
People_tracking_depencies/pal_person_detector_opencv/: CMakeLists.txt  package.xml
People_tracking_depencies/pal_person_detector_opencv/launch/: detector.launch
People_tracking_depencies/pal_person_detector_opencv/src/: person_detector.cpp
bags/: empty_ws.bag  people_detection_interaction.bag  people_detection_slow.bag
fetch_recycle/: CMakeLists.txt  package.xml
fetch_recycle/launch/: mazeFetch.launch  track_marker.launch
fetch_recycle/models/cans/: model.config  model.sdf
fetch_recycle/models/cans/materials/scripts/: cylinder.material
fetch_recycle/models/cans/meshes/: cylindermesh.dae
fetch_recycle/models/table1/: model.sdf
fetch_recycle/rviz/: fetch.rviz
fetch_recycle/scripts/: joint_controller.py  moveit.py  tilt_head_down.py
fetch_recycle/views/: customView.rviz
fetch_recycle/worlds/: maze10.sdf  maze3.sdf  maze6.sdf  maze7.sdf  maze8.sdf  maze9.sdf
matlab/: transforms-data.mat
matlab/FetchRobot/: Fetch.m  Fetch.m~  FetchLink0.ply  FetchLink1.ply  FetchLink2.ply  FetchLink3.ply  FetchLink4.ply  FetchLink5.ply  FetchLink6.ply  FetchLink7.ply  FetchRobot.m  interpolateJointAnglesFetch.m  test.m  test.m~  transforms-data.mat
matlab/GUI/: GUI.fig  GUI.m  GUI.m~  app1.mlapp
matlab/scratch/: ExampleHelperRigidBodyTreeStateSpace.m  ExampleHelperValidatorRigidBodyTree.m  collisiontest.m  exampleHelperDrawHorizontalCircle.m  exampleHelperEndEffectorGrab.m  exampleHelperEndEffectorRelease.m  exampleHelperIsStateInWorkspaceGoalRegion.m  exampleHelperPathSmoothing.m  humanDetection.m  motion.m  pcloudtest.m  peopledetector.m  rrt.m  test.m  testrrt.m  transforms-data.mat
matlab/scripts/: Main.m  collision.m  environmentSafety.m  fetchMotion.m  main.m  main.m~  pcloudtest.m  rosData.m  transforms-data.mat
