<?xml version="1.0"?>
<package>
  <name>pal_person_detector_opencv</name>
  <version>0.1.0</version>
  <description>Fullbody person detector on RGB images based on OpenCV HoG Adaboost cascade</description>

  <maintainer email="esgaanza98@gmail.com">Esteban Andrade</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
